Add sequelize and refactor methods
