# src/dtos/user-signin.ts
@@ -1,0 +1,9 @@
+import { IsEmail, IsString } from 'class-validator';
+
+export class CreateUserSignInDto {
+  @IsEmail()
+  public email: string;
+
+  @IsString()
+  public password: string;
+}
