# src/routes/auth.route.ts
@@ -1,6 +1,7 @@
+import { CreateUserSignInDto } from '../dtos/user-signin';
 import { Router } from 'express';
 import AuthController from '../controllers/auth.controller';
-import { CreateUserDto } from '../dtos/users.dto';
+import { CreateUserDto } from '../dtos/user.dto';
 import Route from '../interfaces/routes.interface';
 import authMiddleware from '../middlewares/auth.middleware';
 import validationMiddleware from '../middlewares/validation.middleware';
@@ -15,8 +16,8 @@ class AuthRoute implements Route {
 
   private initializeRoutes() {
     this.router.post(`/signup`, validationMiddleware(CreateUserDto), this.authController.signUp);
-    this.router.post(`/login`, validationMiddleware(CreateUserDto), this.authController.logIn);
-    this.router.post(`/logout`, authMiddleware, this.authController.logOut);
+    this.router.post(`/signin`, validationMiddleware(CreateUserSignInDto), this.authController.signIn);
+    // this.router.post(`/logout`, authMiddleware, this.authController.logOut);
   }
 }
 
